--- a/frameworks/projects/Jewel/src/main/sass/components/_footerbar.sass
+++ b/frameworks/projects/Jewel/src/main/sass/components/_footerbar.sass
@@ -51,7 +51,7 @@ $footer-bar-button-size: 48px
         align-items: center
         min-width: 0
         z-index: 1
-        justify-content: flex-start
+        // justify-content: flex-start
         order: -1
 
         // &.alignRight
